force-app/main/default/objects/osf_Product__c/osf_Product__c.object-meta.xml
<CustomObject>
    <label>osf Product</label>
    <nameField>
        <label>osf Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>osf Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>