force-app/main/default/objects/osf_Product__c/fields/AlternateName__c.field-meta.xml
<CustomField>
    <fullName>AlternateName__c</fullName>
    <inlineHelpText>If Alternate Name is not empty - will be used for product name.</inlineHelpText>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>