force-app/main/default/objects/osf_Product__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
    <description>The last date that this product will be available.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>