force-app/main/default/objects/osf_Product__c/fields/LongDescRT__c.field-meta.xml
<CustomField>
    <fullName>LongDescRT__c</fullName>
    <description>Rich text field for the Long Description</description>
    <label>LongDescRT</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>