force-app/main/default/objects/osf_Product__c/fields/osf_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>osf_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Fabricante__c</referenceTo>
    <relationshipLabel>osf Products</relationshipLabel>
    <relationshipName>osf_Products</relationshipName>
    <type>Lookup</type>
</CustomField>