force-app/main/default/objects/osf_Product__c/fields/osf_OriginalCode__c.field-meta.xml
<CustomField>
    <fullName>osf_OriginalCode__c</fullName>
    <label>Original Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>