force-app/main/default/objects/osf_Product__c/fields/osf_Product__c.field-meta.xml
<CustomField>
    <fullName>osf_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>osf Products</relationshipLabel>
    <relationshipName>osf_Products</relationshipName>
    <type>Lookup</type>
</CustomField>