force-app/main/default/objects/osf_Product__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>External product Id, tying this product to the source system. Typically contains the SKU/product id from a backend system such as SAP.</description>
    <externalId>true</externalId>
    <label>Product Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>