force-app/main/default/objects/osf_Product__c/fields/ProductWeight__c.field-meta.xml
<CustomField>
    <fullName>ProductWeight__c</fullName>
    <description>Weight of the product - used as a shipping parameter</description>
    <label>Product Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>