force-app/main/default/objects/osf_Product__c/fields/Quantityperunit__c.field-meta.xml
<CustomField>
    <fullName>Quantityperunit__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of items that come in one order-able unit</description>
    <label>Quantity per Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>