force-app/main/default/objects/osf_Product__c/fields/ShortDescRT__c.field-meta.xml
<CustomField>
    <fullName>ShortDescRT__c</fullName>
    <description>Rich text field for the Short Description</description>
    <label>ShortDescRT</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>