force-app/main/default/objects/osf_Product__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>SKU/product number/product Id of the product. This is the unique identifier of the product, and is used as the primary reference point within B2B Commerce</description>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>