force-app/main/default/objects/osf_Product__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The first date that this product will be available.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>